k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exersio
  labels:
    app: exersio
    environment: production
